assets/css/main.css
/* ... */
	body.index #main {
		padding-top: 5em;
	}

/* CTA Hours/Address/Contact */

	#cta {
		color: #052909;
		padding: 5em;
		text-align: center;
	}

	/* icons within section */
	#cta span {
		color:rgb(33, 122, 33);
		font-size:.8em;
	}


/* Contact Us Page */
#contact {
	background: #1a3f38;
	background-size: 25em;
	padding-bottom:1em;
}

	#contact h2 {
		color:white;
	}

	#contact p {
		width:60%;
		text-align:center;
		margin:0 auto;
	}


/* Footer */

	#footer {
		/* background: #8c9e8c;
		color:#fff; */
		background: #e8f4ee;
		color: #7c8081;
		padding: 5em 5em 10em 5em;
		text-align: center;
	}

		#footer .copyright {
			font-size: 0.8em;
			line-height: 1em;
		}

			#footer .copyright a {
				color: inherit;
			}

			#footer .copyright li {
				display: inline-block;
				margin-left: 1em;
				padding-left: 1em;
				border-left: dotted 1px;
			}

				#footer .copyright li:first-child {
					margin: 0;
					padding: 0;
					border: 0;
				}

/* Wide */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 14pt;
			}

		/* Section/Article */

			header.special {
				padding-top: 5.5em;
				margin-bottom: 4em;
			}

	}

/* Normal */

	@media screen and (max-width: 1280px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 13pt;
				letter-spacing: 0.025em;
				line-height: 1.65em;
			}

			h1, h2, h3, h4, h5, h6 {
				line-height: 1.5em;
			}

		/* Section/Article */

			header.major {
				padding-bottom: 1.5em;
			}

			footer.major {
				padding-top: 2em;
			}

		/* Wrapper */

			.wrapper {
				margin-bottom: 4em;
				padding: 4em 3em;
			}

				.wrapper.style4 {
					padding: 3em;
				}

		/* Header */

			#header nav ul li {
				margin-left: 1em;
			}

		/* Banner */

			#banner {
				background-attachment: scroll;
			}

		/* CTA */

			#cta {
				padding: 4em;
				background-attachment: scroll;
			}

		/* Footer */

			#footer {
				padding: 4em;
			}

	}

/* Narrow */

	@media screen and (max-width: 980px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 13pt;
				letter-spacing: 0.025em;
				line-height: 1.5em;
			}

		/* Section/Article */

			header br {
				display: none;
			}

			header.major {
				padding-bottom: 1em;
			}

			header.special {
				padding-left: 2.5em;
				padding-right: 2.5em;
			}

			footer.major {
				padding-top: 1.5em;
			}

		/* Wrapper */

			.wrapper {
				margin-bottom: 3em;
				padding: 3em 2.5em;
			}

				.wrapper.special br {
					display: none;
				}

				.wrapper.style1 {
					padding: 0 2.5em;
				}

				.wrapper.style2 {
					background-size: 15em;
				}

				.wrapper.style4 {
					padding: 2.5em;
				}

		/* Main */

			#main {
				background-size: 15em;
			}

		/* CTA */

			#cta {
				background-size: 15em, 15em, auto, cover;
				padding: 3em;
			}

	}

/* Narrower */

	#navPanel, #navButton {
		display: none;
	}
/* ... */

